# dolfi-api

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.MD  config.py  gunicorn.conf.py  mypy_errors.txt  pyproject.toml
app/: __init__.py  models.py  routes.py  schemas.py  tasks.py
app/blueprints/: __init__.py  txs.py  wallet.py
app/controllers/txs/: last_txs.py  txs.py
app/controllers/wallets/: all_wallets.py  wallet.py  wallet_temporal.py
app/data/: auth.py  calculation.py  models.py  schemas.py  tx.py  wallet.py
app/ext/: models.py  schemas.py  tasks.py
app/services/: auth.py  blockchain_service.py  calculation_service.py  price_service.py  utils.py
migrations/: env.py
migrations/versions/: 192b2215e905_.py  300586ff8203_.py  e43f4a3ff578_.py
tests/: conftest.py
tests/routes/: test_routes_txs.py  test_routes_wallets.py
