[project]
name = "d0lfi"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Passos",email = "tm123br@live.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-apscheduler (>=1.13.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "flask-marshmallow (>=1.3.0,<2.0.0)",
    "marshmallow-sqlalchemy (>=1.4.2,<2.0.0)",
    "flask-talisman (>=1.1.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "flask-caching (>=2.3.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-smorest (>=0.46.1,<0.47.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
taskipy = "^1.14.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
bandit = "^1.8.3"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.stubs.dependencies]
types-requests = "^2.32.0.20250328"
types-flask = "^1.1.6"
celery-types = "^0.23.0"

[tool.ruff]
line-length = 79
extend-exclude = ['static']

[tool.ruff.lint]
preview = true
ignore = ["PLR2004", "PLC0415"]
select = ["I", "F", "E", "W", "PL"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.taskipy.tasks]
run = "flask run"
lint = "ruff check . ; ruff check . --diff"
format = "ruff check . --fix ; ruff format ."
commit = "git add . ; git commit -a -m"
build = "sudo docker build -t dolfi ."
dkrun = "sudo docker run -p 5000:5000 --env-file .flaskenv dolfi"
rm-all-imgs = "docker rmi $(docker images -q)"
dev = "git checkout dev"
main = "git checkout main"
queue = "celery -A make_celery:celery_app worker --loglevel=info"
flower = "celery -A make_celery:celery_app flower"
post = "http POST http://127.0.0.1:5000/34piq2XmS3shJR3UTo8YuKkTrPZjrTTiZ8 X-Api-Key:BbfvrpJnSYJocYY#KrHTgUrb*4tfy*4PvB3ZNdz2huaZgz49gG"
get = "http GET http://127.0.0.1:5000/34piq2XmS3shJR3UTo8YuKkTrPZjrTTiZ8 X-Api-Key:BbfvrpJnSYJocYY#KrHTgUrb*4tfy*4PvB3ZNdz2huaZgz49gG"
get_all = "chttp DELETE http://127.0.0.1:5000/all X-Api-Key:BbfvrpJnSYJocYY#KrHTgUrb*4tfy*4PvB3ZNdz2huaZgz49gG"
delete = "http DELETE http://127.0.0.1:5000/34piq2XmS3shJR3UTo8YuKkTrPZjrTTiZ8 X-Api-Key:BbfvrpJnSYJocYY#KrHTgUrb*4tfy*4PvB3ZNdz2huaZgz49gG"
update = "http UPDATE http://127.0.0.1:5000/update X-Api-Key:BbfvrpJnSYJocYY#KrHTgUrb*4tfy*4PvB3ZNdz2huaZgz49gG"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = "name-defined"
explicit_package_bases = true
exclude = ["migrations"]